--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ Pillow==9.0.0
 PyPDF2==3.0.1
 pyhtml2pdf==0.0.6
 python-dateutil==2.8.2
+selenium==4.11.2
 six==1.16.0
 sqlparse==0.4.2
 tzdata==2021.5
