--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ numpy==1.22.0
 Pillow==9.0.0
 PyPDF2==3.0.1
 python-dateutil==2.8.2
+python-dotenv==0.21.1
 reportlab==3.6.13
 six==1.16.0
 sqlparse==0.4.2
