--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,8 @@ django-multiselectfield==0.1.12
 django-storages==1.12.3
 gunicorn==20.1.0
 jmespath==0.10.0
-numpy==1.22.0
+numpy==1.25.2
+pandas==2.0.3
 Pillow==9.0.0
 PyPDF2==3.0.1
 python-dateutil==2.8.2
